HTML file updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3 id="project">PROJECTS</h3>
 
         <div class="card">
-            <img src="media/AMAZON_CLONE.jpg" alt="card">
+            <img src="media/AMAZON_CLONE.png" alt="card">
             <div class="card-content">
                 <p><b>AMAZON WEBSITE CLONE </b>made with help of technology including <b>HTML</b> & <b>CSS</b></p>
                 
@@ -75,16 +75,16 @@
             </div>
         </div>
         <div class="card">
-            <img src="media/favicon.png" alt="card">
+            <img src= alt="card">
             <div class="card-content">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, error! Aperiam, nisi. Nihil dicta modi voluptatum dolores magni aliquid reprehenderit!</p>
+                <p>Project 2</p>
                 <a href="" class="button">View Project</a>
             </div>
         </div>
         <div class="card">
-            <img src="media/favicon.png" alt="card">
+            <img src=" alt="card">
             <div class="card-content">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat quis quidem rerum impedit doloremque error, labore sint minima facere esse.</p>
+                <p>Project 3</p>
                 <a href="" class="button">View Project</a>
             </div>
         </div>
